# quantum-garden-game

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
docs/: adding-modes-and-levels.md  baseline-gameplay-checklist.md  baseline-snapshot.json  determinism-risk-controls.md  index.htm  index.html  modular-offline-tauri-roadmap.md  platform-build-notes.md  project-context.md  release-checklist.md
scripts/: baseline-gameplay-parity.mjs  baseline-snapshot.mjs  camera-view-smoke.mjs  copy-static-assets.mjs  llm-agent-sample.mjs  llm-browser-harness.mjs  localized-viewport-smoke.mjs  offline-load-smoke.mjs  playability-smoke.mjs  tauri-desktop-launch-smoke.mjs  tauri-dev-launch-smoke.mjs  tauri-windows-install-smoke.mjs  verify-offline-build.mjs  visual-viewport-smoke.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
test/: active-avatar-score.test.js  active-camera-controls.test.js  active-control-accessibility.test.js  active-game-cleanup.test.js  active-game-timing.test.js  active-locale-startup.test.js  active-localized-copy.test.js  active-logical-css.test.js  active-mode-select.test.js  active-pause-visuals.test.js  active-play-controls.test.js  active-quality-runtime.test.js  active-seeded-random.test.js  active-world-lifecycle.test.js  browser-agent-hook.test.js  camera-controller.test.js  determinism-risk-controls.test.js  disposal.test.js  document-shell.test.js  entities.test.js  game-controller.test.js  i18n.test.js  input.test.js  llm-agent-sample.test.js  (+19 more)
(+63 files in other folders)
